exports[`scanUrl > #invalid // Copied from https://github.com/facebook/regener... 1`] = `
## Input
    1 | // Copied from https://github.com/facebook/regenerator/blob/main/packages/runtime/runtime.js#L736=

## Output
  > (1)

    > 1 | // Copied from https://github.com/facebook/regenerator/blob/main/packages/runtime/runtime.js#L736=
        |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Hello\\nGo to http://example.com/%E4%BD%A0%E5%A5%BD... 1`] = `
## Input
    1 | Hello
    2 | Go to http://example.com/%E4%BD%A0%E5%A5%BD for more info

## Output
  > (1)

      1 | Hello
    > 2 | Go to http://example.com/%E4%BD%A0%E5%A5%BD for more info
        |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Hello\\nGo to http://example.com/?a=b?? for more in... 1`] = `
## Input
    1 | Hello
    2 | Go to http://example.com/?a=b?? for more info

## Output
  > (1)

      1 | Hello
    > 2 | Go to http://example.com/?a=b?? for more info
        |       ^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid Hello\\nGo to http://example.com/你好 for more info 1`] = `
## Input
    1 | Hello
    2 | Go to http://example.com/你好 for more info

## Output
  > (1)

      1 | Hello
    > 2 | Go to http://example.com/你好 for more info
        |       ^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid See https://example.com/issue/1234 for details. 1`] = `
## Input
    1 | See https://example.com/issue/1234 for details.

## Output
  > (1)

    > 1 | See https://example.com/issue/1234 for details.
        |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid https://example.com/issue/1234 1`] = `
## Input
    1 | https://example.com/issue/1234

## Output
  > (1)

    > 1 | https://example.com/issue/1234
        | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid see https://example.com and https://example2.com 1`] = `
## Input
    1 | see https://example.com and https://example2.com

## Output
  > (1)

    > 1 | see https://example.com and https://example2.com
        |     ^^^^^^^^^^^^^^^^^^^

  > (2)

    > 1 | see https://example.com and https://example2.com
        |                             ^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid see https://example.com;new line 1`] = `
## Input
    1 | see https://example.com;new line

## Output
  > (1)

    > 1 | see https://example.com;new line
        |     ^^^^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid see https://example.com?foo=bar and https://exampl... 1`] = `
## Input
    1 | see https://example.com?foo=bar and https://example2.com

## Output
  > (1)

    > 1 | see https://example.com?foo=bar and https://example2.com
        |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

  > (2)

    > 1 | see https://example.com?foo=bar and https://example2.com
        |                                     ^^^^^^^^^^^^^^^^^^^^
`;

exports[`scanUrl > #invalid see https://example.com\\nnew line 1`] = `
## Input
    1 | see https://example.com
    2 | new line

## Output
  > (1)

    > 1 | see https://example.com
        |     ^^^^^^^^^^^^^^^^^^^
      2 | new line
`;

exports[`scanUrl > #invalid see https://example.com{new line 1`] = `
## Input
    1 | see https://example.com{new line

## Output
  > (1)

    > 1 | see https://example.com{new line
        |     ^^^^^^^^^^^^^^^^^^^
`;
